# verveux-agent

./: .env.example  .env:  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.studio  README.md  inspect_db.py  langgraph.json  pyproject.toml  skills-lock.json
.github/workflows/: publish-ghcr.yaml
migrations/: init.sql
src/: config.py  llm.py  main.py  observability.py
src/agents/: backend_client.py  complaint_collect.py  customer_data_collect.py  escalation.py  execute.py  faq_response.py  orchestrator.py  order_history.py  order_summary.py  rag.py  sales_collect.py  sales_confirm.py  tracking_collect.py  triage.py  utils.py  workflow.py
src/auth/: cognito.py
src/db/: postgres.py
src/graphs/: main_graph.py  state.py  studio_graph.py
src/services/: cart.py  product_resolver.py
tests/: conftest.py  test_graph.py  test_interrupt.py
